# brave-core

./: DEPS  package.json
android/: brave_java_sources.gni
app/: brave_generated_resources.grd  generated_resources.grd
browser/: BUILD.gn  brave_browser_process_impl.cc  brave_browser_process_impl.h  brave_content_browser_client.cc  brave_first_run_browsertest.h  brave_profile_prefs.cc  brave_profile_prefs_browsertest.cc  browser_context_keyed_service_factories.cc
browser/autocomplete/: brave_autocomplete_scheme_classifier.cc
browser/binance/: binance_protocol_handler.cc
browser/brave_rewards/: extension_rewards_service_observer.cc  tip_dialog.cc  (+1 more)
common/: BUILD.gn  brave_url_constants.cc  brave_webui_url_constants.cc  sources.gni  webui_url_constants.cc  webui_url_constants.h
common/extensions/api/: BUILD.gn  _api_features.json
patches/: chrome-BUILD.gn.patch  chrome-VERSION.patch  chrome-android-chrome_public_apk_tmpl.gni.patch  chrome-android-java-src-org-chromium-chrome-browser-app-ChromeActivity.java.patch  chrome-android-java-src-org-chromium-chrome-browser-toolbar-ToolbarManager.java.patch  chrome-browser-BUILD.gn.patch  chrome-browser-extensions-api-webrtc_logging_private-webrtc_logging_private_api.cc.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-extensions-icon_with_badge_image_source.cc.patch  chrome-browser-ui-views-omnibox-omnibox_view_views.h.patch  chrome-common-BUILD.gn.patch  chrome-renderer-BUILD.gn.patch  components-omnibox-browser-BUILD.gn.patch  components-translate-core-browser-BUILD.gn.patch  media-base-BUILD.gn.patch  third_party-blink-renderer-modules-webgl-webgl_rendering_context_base.cc.patch  third_party-widevine-cdm-BUILD.gn.patch
renderer/: BUILD.gn  sources.gni
test/: BUILD.gn
(+153 files in other folders)
